# embedded-hal-compat

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: forward.rs  lib.rs  markers.rs  reverse.rs
tests/: delay_forward.rs  delay_reverse.rs  digital_forward.rs  digital_reverse.rs  i2c_forward.rs  i2c_reverse.rs  serial_forward.rs  serial_reverse.rs  spi_forward.rs  spi_reverse.rs  wait_forward.rs
