[package]
name = "embedded-hal-compat"
description = "Compatibility layer for interoperability between different embedded-hal versions"
repository = "https://github.com/ryankurte/embedded-hal-compat"
keywords = [ "embedded", "embedded-hal", "no-std", "compat", "compatibility" ]
version = "0.10.0"
authors = ["Ryan Kurte <ryan@kurte.nz>", "Diego Barrios Romero <eldruin@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
defmt = { version = "0.3.0", optional = true }
nb = "1.1"

[dependencies.eh0_2]
package = "embedded-hal"
version = "0.2.7"
features = [ "unproven" ]

[dependencies.eh1_0]
package = "embedded-hal"
version = "=1.0.0-alpha.10"
